Fixed Registration modal fixed positioning and overflow/scroll issues

--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -112,6 +112,9 @@ header {
 				font-weight: 900;
 				text-transform: uppercase;
 			}
+			a:hover, a:active {
+				color: $edgeYellow;
+			}
 		}
 	}
 }
@@ -132,7 +135,7 @@ header {
 		top: none;
 		right: none;
 		//bottom: 10px solid #333;
-		bottom: 2px dotted #aaa;
+		bottom: 2px dotted #bbb;
 		left: none;
 	}
 	padding: 30px 0 30px 0;
@@ -229,6 +232,17 @@ header {
 			background: url(/images/icon_googleplus.png) center top no-repeat;
 		}
 	}
+}
+#registration-form {
+	/* Override default Foundation styles */
+	bottom: 50px;
+	overflow: scroll;
+	position: fixed;
+	top: 50px !important;
+	z-index: 3000;
+}
+.modal-open {
+	overflow: hidden;
 }
 footer {
 	background: #333;
